# VerifAI

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
docs/: data_statement.md  model_card.md
outputs/: artifact_environment.json  data_profile.json  holdout_predictions.csv  leakage_report.json  metrics.json  model.joblib  pipeline.joblib  vectorizer.joblib
src/: detect_fake_news.py  model_compat.py  streamlit_app.py  text_clean.py  train_model.py  utils.py
tests/: test_cli_predict.py  test_model_compat.py  test_pipeline.py  test_text_clean.py  test_training_smoke_artifacts.py
